--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,8 @@ html
 	head
 		script(src="/js/riot.js")
 	body
-		h1 ToDo App - (With Travis CI)
+		h1 ToDo App - L03HandsOn 
+		(With Travis CI)
 		script(type="riot/tag" src="/tags/todo.tag")
 		script(src="/js/client.js")
 		todo
